2009-08-25  Janus Weil  <janus@gcc.gnu.org>

	PR middle-end/41149
	* tree-pretty-print.c (print_call_name): Print the correct call name
	for procedure pointer components.

2009-08-24  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/ia64.c (ia64_promote_function_mode): Call
	default_promote_function_mode when not VMS.

2009-08-24  Olivier Hainque  <hainque@adacore.com>

	* convert.c (convert_to_integer): Don't assume an input pointer is
	POINTER_SIZE wide.  Fetch from the type instead.

2009-08-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac (AC_PREREQ): Bump to 2.64.

2009-08-24  Rafael Avila de Espindola  <espindola@google.com>

	* gcc.c (standard_exec_prefix_1,standard_exec_prefix_2): Remove.
	(process_command): Don't search standard_exec_prefix_1 and
	standard_exec_prefix_2.

2009-08-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

       * config/arm/arm.c (output_return_instruction): Handle for
       unified syntax.

2009-08-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

       * config/arm/arm.c (arm_select_cc_mode): Handle subreg.

2009-08-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

        * config/arm/vfp.md (*arm_movdi_vfp): Mark as predicable.
        (*arm_movdf_vfp): Likewise.

2009-08-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

       * config/arm/neon.md (vashl<mode>3): Rename from ashl<mode>3.
       (vashr<mode>3): Rename from ashr<mode>3.
       (vlshr<mode>3): Rename from lshr<mode>3.

2009-08-24  Kai Tietz  <kai.tietz@onevision.com>

	PR/40786
	* c-format.c (format_wanted_type):  Add new member scalar_identity_flag.
	(check_format_info_main): Use scalar_identify_flag.
	(check_format_types): Check for scalar size identity if
	scalar_identify_flag is set.
	(printf_length_specs): Extend by new field.
	(asm_fprintf_length_specs): Likewise.
	(gcc_diag_length_specs): Likewise.
	(scanf_length_specs): Likewise.
	(strfmon_length_specs): Likewise.
	(gcc_gfc_length_specs): Likewise.